@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Oct 2014; Harold Naparst <harold@alum.mit.edu> joomla-3.3.6.ebuild:
+  Modified ebuild to reflect discussion in irc. IUSE flags are removed
+  from this ebuild because a change of backend db should not force a rebuild
+  of joomla. Instead, it is required that php has been built with either mysql
+  or postgresql support.
+
 *joomla-3.3.6 (07 Oct 2014)
 
   07 Oct 2014; Harold Naparst <harold@alum.mit.edu> +joomla-3.3.6.ebuild:
